# GL

3dTest/: 3dTest.cdi  EditViewParamsDlg.java  EditViewParamsDlg.~jav  View3dParameters.java  View3dParameters.~jav  View3dTest.java  ViewTest_Menu1.java  ViewTest_Menu1.~jav
3dTest/View3dTest/: View3dParameters.java  View3dParameters.~jav  (+1 more)
Clock/: Clock.cdi  Clock.java  Clock.~jav  MainMenu.java  MainMenu.~jav
GLNext_full2/: CMakeLists.txt  DESIGN.md
GLNext_full2/docs/: diagrams.md
GLNext_full2/include/glnext/: Renderer.hpp
GLNext_full2/src/: Buffer.hpp  CMakeLists.txt  D3D11Renderer.cpp  D3D11Renderer.hpp  RenderGraph.cpp  RendererD3D12.cpp  RendererVulkan.cpp  Scene.cpp  main.cpp
GLNext_full2/tests/: CMakeLists.txt  test_math.cpp
GraphicsPackage/: 3dTest.cdi  3dTest.html  3dTest.jpr  AnalogClock.cdi  AnalogClockApplet.java  AnalogClock_DeploymentProf.prf  AnalogClock_bak.cdi  ApplicationFrame.java  ApplicationFrame.~jav  BasicProjection.java  BasicProjection.~jav  Bezier2d.java  Bezier2d.~jav  BresenhamCircle.java  BresenhamCircle.~jav  Buffer.java  Buffer.~jav  Clock.cdi  Clock.html  Clock.jpr  Clock.~jav  CompoundGraphicObject2d.java  CompoundGraphicObject2d.~jav  DateTime.java  DoubleObject.java  DoubleObject.~jav  Drawing2d.java  Drawing2d.~jav  FontTest.java  ForeignObjectException.java  ForeignObjectException.~jav  GraphicObject2d.java  GraphicObject2d.~jav  GraphicObjectIdentifier.java  GraphicObjectIdentifier.~jav  GraphicsPackage.cdi  GraphicsPackage.jpr  HiddenSurfaces.java  ICompoundGraphicObject2d.java  ICompoundGraphicObject2d.~jav  (+40 more)
(+8 files in other folders)
